Implement buffer write checking in ASM

--- a/examples/test_rmii_rt/CMakeLists.txt
+++ b/examples/test_rmii_rt/CMakeLists.txt
@@ -15,10 +15,11 @@ set(COMPILER_FLAGS_COMMON   -g
                             )
 
 
-set(APP_COMPILER_FLAGS_tx4b_rx4b    ${COMPILER_FLAGS_COMMON} -DTX_WIDTH=4 -DRX_WIDTH=4)
-set(APP_COMPILER_FLAGS_tx1b_rx4b    ${COMPILER_FLAGS_COMMON} -DTX_WIDTH=1 -DRX_WIDTH=4)
-set(APP_COMPILER_FLAGS_tx4b_rx1b    ${COMPILER_FLAGS_COMMON} -DTX_WIDTH=4 -DRX_WIDTH=1)
-set(APP_COMPILER_FLAGS_tx1b_rx1b    ${COMPILER_FLAGS_COMMON} -DTX_WIDTH=1 -DRX_WIDTH=1)
+set(APP_COMPILER_FLAGS_tx4b_rx4b        ${COMPILER_FLAGS_COMMON} -DTX_WIDTH=4 -DRX_WIDTH=4)
+set(APP_COMPILER_FLAGS_tx4b_rx4b_upper  ${COMPILER_FLAGS_COMMON} -DTX_WIDTH=4 -DRX_WIDTH=4 -DUSE_LOWER=0)
+set(APP_COMPILER_FLAGS_tx1b_rx4b        ${COMPILER_FLAGS_COMMON} -DTX_WIDTH=1 -DRX_WIDTH=4)
+set(APP_COMPILER_FLAGS_tx4b_rx1b        ${COMPILER_FLAGS_COMMON} -DTX_WIDTH=4 -DRX_WIDTH=1)
+set(APP_COMPILER_FLAGS_tx1b_rx1b        ${COMPILER_FLAGS_COMMON} -DTX_WIDTH=1 -DRX_WIDTH=1)
 
 set(APP_XSCOPE_SRCS         src/config.xscope)
 
