Added a function for receiving preamble that also selects on rxdv going low for 1b recv case. Currently does not meet timing

--- a/tests/test_rx/CMakeLists.txt
+++ b/tests/test_rx/CMakeLists.txt
@@ -47,7 +47,12 @@ foreach(PROFILE ${profile_list})
             list(APPEND done_configs ${config})
             message(STATUS "Building cfg_name: ${config}")
 
-            set_app_hw_target(arch)
+            if(arch STREQUAL "xs3")
+                set(target "XCORE-AI-EXPLORER_custom.xn")
+            elseif(arch STREQUAL "xs2")
+                set(target "XCORE-200-EXPLORER")
+            endif()
+            set(APP_HW_TARGET ${target})
 
             set(APP_COMPILER_FLAGS_${config}    ${COMPILER_FLAGS_COMMON})
 
