Initial restart test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,4 +19,5 @@ add_subdirectory(test_speed_change)
 add_subdirectory(test_rx_queues)
 add_subdirectory(test_check_ifg_wait)
 add_subdirectory(test_rmii_timing)
+add_subdirectory(test_mii_rmii_restart)
 
