Support exit for RMII only (remove MII)

--- a/tests/test_rmii_restart/CMakeLists.txt
+++ b/tests/test_rmii_restart/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
 include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
-project(test_mii_rmii_restart)
+project(test_rmii_restart)
 
 include(../helpers.cmake)
 include(../test_deps.cmake)
