--- a/tests/test_smi/CMakeLists.txt
+++ b/tests/test_smi/CMakeLists.txt
@@ -26,46 +26,18 @@ get_json_list(${JSON_CONTENT} PROFILES profile_list)
 
 set(done_configs "")
 foreach(PROFILE ${profile_list})
+    string(JSON type GET ${PROFILE} type)
     get_json_list(${PROFILE} arch arch_list) # Get archs to build for, for this particular profile
     foreach(arch ${arch_list})
-        string(JSON phy GET ${PROFILE} phy)
-        string(JSON clk GET ${PROFILE} clk)
-        string(JSON mac GET ${PROFILE} mac)
+        set(config "${type}_${arch}")
+        message(STATUS "Building cfg_name: ${config}")
 
-        set(config "${mac}_${phy}_${arch}")
+        set_app_hw_target(arch)
 
-        list (FIND done_configs ${config} _index)
+        set(APP_COMPILER_FLAGS_${config}    ${COMPILER_FLAGS_COMMON})
 
-        if(${_index} EQUAL -1) # Only build if it is a new config
-            list(APPEND done_configs ${config})
-            message(STATUS "Building cfg_name: ${config}")
-
-            set_app_hw_target(arch)
-
-            set(APP_COMPILER_FLAGS_${config}    ${COMPILER_FLAGS_COMMON})
-
-            string(FIND "${PROFILE}" "rt" position)
-            if(position GREATER -1)
-                list(APPEND APP_COMPILER_FLAGS_${config} -DRT=1)
-            else()
-                list(APPEND APP_COMPILER_FLAGS_${config} -DRT=0)
-            endif()
-
-            string(FIND "${PROFILE}" "hp" position)
-            if(position GREATER -1)
-                list(APPEND APP_COMPILER_FLAGS_${config} -DETHERNET_SUPPORT_HP_QUEUES=1)
-            else()
-                list(APPEND APP_COMPILER_FLAGS_${config} -DETHERNET_SUPPORT_HP_QUEUES=0)
-            endif()
-
-            if(${phy} MATCHES "rgmii")
-                list(APPEND APP_COMPILER_FLAGS_${config} -DRGMII=1)
-            else()
-                list(APPEND APP_COMPILER_FLAGS_${config} -DRGMII=0)
-            endif()
-            XMOS_REGISTER_APP()
-            unset(APP_COMPILER_FLAGS_${config})
-        endif() # if(${_index} equal -1) # New config
+        XMOS_REGISTER_APP()
+        unset(APP_COMPILER_FLAGS_${config})
 
     endforeach() # foreach(arch ${arch_list})
     unset(arch_list)
