Set NUM_ETHERNET_PORTS to 1 by default.

--- a/tests/test_rmii_dual_basic/CMakeLists.txt
+++ b/tests/test_rmii_dual_basic/CMakeLists.txt
@@ -14,7 +14,8 @@ set(APP_INCLUDES            ../include src)
 set(COMPILER_FLAGS_COMMON   -g
                             -report
                             -DDEBUG_PRINT_ENABLE=1
-                            -Os)
+                            -Os
+                            -DNUM_ETHERNET_PORTS=2)
 
 set(XMOS_SANDBOX_DIR                    ${CMAKE_CURRENT_LIST_DIR}/../../..)
 
