--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,4 +20,5 @@ add_subdirectory(test_rx_queues)
 add_subdirectory(test_check_ifg_wait)
 add_subdirectory(test_rmii_timing)
 add_subdirectory(test_rmii_restart)
+add_subdirectory(test_rmii_dual_basic)
 
