--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,5 +21,5 @@ add_subdirectory(test_check_ifg_wait)
 add_subdirectory(test_rmii_timing)
 add_subdirectory(test_rmii_restart)
 add_subdirectory(test_smi)
-add_subdirectory(test_do_idle_slope)
+add_subdirectory(test_do_idle_slope_unit)
 
