Add support to connect and shutdown the device over xscope-port

--- a/tests/hw_test_mii_rx_only/CMakeLists.txt
+++ b/tests/hw_test_mii_rx_only/CMakeLists.txt
@@ -14,7 +14,8 @@ set(COMPILER_FLAGS_COMMON   -g
                             -save-temps
                             -Os
                             -Wno-reinterpret-alignment
-                            -DENABLE_DUT_TIMEOUT=1
+                            -DENABLE_DUT_TIMEOUT=0
+                            -fxscope
                             )
 
 set(APP_COMPILER_FLAGS      ${COMPILER_FLAGS_COMMON})
