--- a/tests/host/xscope_controller/CMakeLists.txt
+++ b/tests/host/xscope_controller/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.5)
 
 project(host_xscope_controller)
 
+# Set C++ standard
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
 add_executable(xscope_controller xscope_controller.cpp)
 
 target_include_directories(xscope_controller PRIVATE $ENV{XMOS_TOOL_PATH}/include)
