--- a/tests/hw_test_mii_tx_only/CMakeLists.txt
+++ b/tests/hw_test_mii_tx_only/CMakeLists.txt
@@ -22,6 +22,13 @@ set(APP_COMPILER_FLAGS_loopback      ${COMPILER_FLAGS_COMMON} -DLOOPBACK=1)
 
 set(APP_XSCOPE_SRCS src/config.xscope)
 
+file(GLOB XC_SOURCES RELATIVE ${CMAKE_CURRENT_LIST_DIR} "src/*.xc")
+file(GLOB COMMON_SOURCES RELATIVE ${CMAKE_CURRENT_LIST_DIR} "${CMAKE_CURRENT_LIST_DIR}/../hw_test_mii/src/xscope_control/*.xc")
+list(APPEND XC_SOURCES ${COMMON_SOURCES})
+
+set(APP_XC_SRCS ${XC_SOURCES})
+set(APP_INCLUDES src ../hw_test_mii/src/xscope_control)
+
 set(XMOS_SANDBOX_DIR    ${CMAKE_CURRENT_LIST_DIR}/../../..)
 
 XMOS_REGISTER_APP()
