--- a/tests/hw_test_mii_tx/CMakeLists.txt
+++ b/tests/hw_test_mii_tx/CMakeLists.txt
@@ -24,11 +24,14 @@ set(APP_COMPILER_FLAGS      ${COMPILER_FLAGS_COMMON})
 set(APP_XSCOPE_SRCS src/config.xscope)
 
 file(GLOB XC_SOURCES RELATIVE ${CMAKE_CURRENT_LIST_DIR} "src/*.xc")
-file(GLOB COMMON_SOURCES RELATIVE ${CMAKE_CURRENT_LIST_DIR} "${CMAKE_CURRENT_LIST_DIR}/../hw_test_mii/src/xscope_control/*.xc")
+file(GLOB COMMON_SOURCES RELATIVE ${CMAKE_CURRENT_LIST_DIR}
+                                  "${CMAKE_CURRENT_LIST_DIR}/../hw_test_mii/src/xscope_control/*.xc"
+                                  "${CMAKE_CURRENT_LIST_DIR}/../hw_test_mii/src/phy_driver/*.xc")
+
 list(APPEND XC_SOURCES ${COMMON_SOURCES})
 
 set(APP_XC_SRCS ${XC_SOURCES})
-set(APP_INCLUDES src ../hw_test_mii/src/xscope_control)
+set(APP_INCLUDES src ../hw_test_mii/src/xscope_control ../hw_test_mii/src/phy_driver)
 
 set(XMOS_SANDBOX_DIR    ${CMAKE_CURRENT_LIST_DIR}/../../..)
 
