Add RMII demo to example build and bump bsp to develop

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,3 +3,4 @@ include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
 project(lib_ethernet_examples)
 add_subdirectory(AN00199_gigabit_ethernet_demo_explorerkit)
 add_subdirectory(app_mii_demo)
+add_subdirectory(app_rmii_100Mbit_icmp)
