--- a/tests/hw_test_mii/CMakeLists.txt
+++ b/tests/hw_test_mii/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.21)
 include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
 project(hw_test_mii)
 
-set(APP_HW_TARGET           SLICEKIT-ETH-TRIANGLE1.xn)
+set(APP_HW_TARGET           xk-eth-xu316-dual-100m.xn)
 
 include(${CMAKE_CURRENT_LIST_DIR}/../../examples/deps.cmake)
 
@@ -15,6 +15,7 @@ set(COMPILER_FLAGS_COMMON   -g
                             -Wno-reinterpret-alignment
                             -DENABLE_DUT_TIMEOUT=0
                             -fxscope
+                            -DBOARD_SUPPORT_BOARD=XK_ETH_XU316_DUAL_100M
                             )
 
 set(APP_COMPILER_FLAGS_rx_only                 ${COMPILER_FLAGS_COMMON})
