Added support for probing TX timestamps

--- a/tests/hw_test_mii_tx/CMakeLists.txt
+++ b/tests/hw_test_mii_tx/CMakeLists.txt
@@ -36,6 +36,7 @@ set(COMPILER_FLAGS_COMMON   -g
 							-fxscope
                             -DBOARD_SUPPORT_BOARD=XK_ETH_XU316_DUAL_100M
                             -DENABLE_MAC_START_NOTIFICATION=1
+                            -DPROBE_TX_TIMESTAMPS=1
                             )
 
 set(APP_COMPILER_FLAGS      ${COMPILER_FLAGS_COMMON})
@@ -47,10 +48,10 @@ file(GLOB COMMON_SOURCES RELATIVE ${CMAKE_CURRENT_LIST_DIR}
                                   "${CMAKE_CURRENT_LIST_DIR}/../hw_test_mii/src/xscope_control/*.xc"
                                   "${CMAKE_CURRENT_LIST_DIR}/../hw_test_mii/src/phy_driver/*.xc")
 
-list(APPEND XC_SOURCES ${COMMON_SOURCES})
+list(APPEND XC_SOURCES ${COMMON_SOURCES}  "../include/log_tx_ts.c")
 
 set(APP_XC_SRCS ${XC_SOURCES})
-set(APP_INCLUDES src ../hw_test_mii/src/xscope_control ../hw_test_mii/src/phy_driver ${REL_AUTOGEN_DIR})
+set(APP_INCLUDES src ../hw_test_mii/src/xscope_control ../hw_test_mii/src/phy_driver ${REL_AUTOGEN_DIR} ../include)
 
 set(XMOS_SANDBOX_DIR    ${CMAKE_CURRENT_LIST_DIR}/../../..)
 
