Added a configuration in hw_test_mii_tx to run with only one client

--- a/tests/hw_test_mii_tx/CMakeLists.txt
+++ b/tests/hw_test_mii_tx/CMakeLists.txt
@@ -39,7 +39,9 @@ set(COMPILER_FLAGS_COMMON   -g
                             )
 
 set(APP_COMPILER_FLAGS_tx_only              ${COMPILER_FLAGS_COMMON})
-set(APP_COMPILER_FLAGS_tx_ts_probe_enabled     ${COMPILER_FLAGS_COMMON} -DPROBE_TX_TIMESTAMPS=1)
+set(APP_COMPILER_FLAGS_tx_single_client     ${COMPILER_FLAGS_COMMON} -DSINGLE_CLIENT=1)
+set(APP_COMPILER_FLAGS_tx_single_client_with_ts_probe     ${COMPILER_FLAGS_COMMON} -DSINGLE_CLIENT=1 -DPROBE_TX_TIMESTAMPS=1)
+
 
 set(APP_XSCOPE_SRCS src/config.xscope)
 
