Added build configs for building HW tests to run on PHY1

--- a/tests/hw_test_mii_tx/CMakeLists.txt
+++ b/tests/hw_test_mii_tx/CMakeLists.txt
@@ -35,10 +35,12 @@ set(COMPILER_FLAGS_COMMON   -g
                             -DENABLE_MAC_START_NOTIFICATION=1
                             )
 
-set(APP_COMPILER_FLAGS_tx_only              ${COMPILER_FLAGS_COMMON} -DETHERNET_SUPPORT_TRAFFIC_SHAPER=1 -DETHERNET_SUPPORT_HP_QUEUES=1 -DPHY=PHY0)
-set(APP_COMPILER_FLAGS_tx_single_client     ${COMPILER_FLAGS_COMMON} -DSINGLE_CLIENT=1 -DPHY=PHY0)
-set(APP_COMPILER_FLAGS_tx_single_client_with_ts_probe     ${COMPILER_FLAGS_COMMON} -DSINGLE_CLIENT=1 -DPROBE_TX_TIMESTAMPS=1 -DPHY=PHY0)
-
+foreach(phy PHY0 PHY1) # compile for each phy
+    string(TOLOWER ${phy} phy_lower)
+    set(APP_COMPILER_FLAGS_tx_only_${phy_lower}                             ${COMPILER_FLAGS_COMMON} -DETHERNET_SUPPORT_TRAFFIC_SHAPER=1 -DETHERNET_SUPPORT_HP_QUEUES=1 -DUSE_${phy}=1)
+    set(APP_COMPILER_FLAGS_tx_single_client_${phy_lower}                    ${COMPILER_FLAGS_COMMON} -DSINGLE_CLIENT=1 -DUSE_${phy}=1)
+    set(APP_COMPILER_FLAGS_tx_single_client_with_ts_probe_${phy_lower}     ${COMPILER_FLAGS_COMMON} -DSINGLE_CLIENT=1 -DPROBE_TX_TIMESTAMPS=1 -DUSE_${phy}=1)
+endforeach()
 
 set(APP_XSCOPE_SRCS src/config.xscope)
 
