--- a/tests/hw_test_rmii_loopback/CMakeLists.txt
+++ b/tests/hw_test_rmii_loopback/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
 include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
-project(hw_test_mii)
+project(hw_test_rmii)
 
 set(APP_HW_TARGET           xk-eth-xu316-dual-100m.xn)
 
@@ -37,13 +37,19 @@ set(COMPILER_FLAGS_COMMON   -g
 
 foreach(phy PHY0 PHY1) # compile for each phy
     string(TOLOWER ${phy} phy_lower)
-    set(APP_COMPILER_FLAGS_rx_${phy_lower}                 ${COMPILER_FLAGS_COMMON} -DUSE_${phy}=1)
-    set(APP_COMPILER_FLAGS_rx_multiple_queues_${phy_lower}      ${COMPILER_FLAGS_COMMON} -DMULTIPLE_QUEUES=1 -DETHERNET_SUPPORT_HP_QUEUES=1 -DUSE_${phy}=1)
+    set(APP_COMPILER_FLAGS_loopback_${phy_lower}                ${COMPILER_FLAGS_COMMON} -DETHERNET_SUPPORT_HP_QUEUES=1 -DUSE_${phy}=1)
 endforeach()
 
 set(APP_XSCOPE_SRCS src/config.xscope)
 
-set(APP_INCLUDES src/xscope_control src/xu316_dual_100m_ports ${REL_AUTOGEN_DIR})
+file(GLOB XC_SOURCES RELATIVE ${CMAKE_CURRENT_LIST_DIR} "src/*.xc")
+file(GLOB COMMON_SOURCES RELATIVE ${CMAKE_CURRENT_LIST_DIR}
+                                  "${CMAKE_CURRENT_LIST_DIR}/../hw_test_mii/src/xscope_control/*.xc"
+                                  "${CMAKE_CURRENT_LIST_DIR}/../hw_test_mii/src/phy_driver/*.xc")
+
+list(APPEND XC_SOURCES ${COMMON_SOURCES})
+set(APP_XC_SRCS ${XC_SOURCES})
+set(APP_INCLUDES src ../hw_test_mii/src/xscope_control ../hw_test_mii/src/xu316_dual_100m_ports ${REL_AUTOGEN_DIR})
 
 set(XMOS_SANDBOX_DIR    ${CMAKE_CURRENT_LIST_DIR}/../../..)
 
