Renamed hw test apps

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,9 +21,12 @@ add_subdirectory(test_check_ifg_wait)
 add_subdirectory(test_rmii_timing)
 add_subdirectory(test_rmii_restart)
 add_subdirectory(test_smi)
-add_subdirectory(hw_test_mii)
 add_subdirectory(test_do_idle_slope_unit)
-add_subdirectory(hw_test_mii_tx)
-add_subdirectory(hw_test_rmii_loopback)
 add_subdirectory(test_tx_ifg)
+
+# HW test apps
+add_subdirectory(hw_test_rmii_rx)
+add_subdirectory(hw_test_rmii_tx)
+add_subdirectory(hw_test_rmii_loopback)
+
 
