--- a/tests/hw_test_rmii_rx/CMakeLists.txt
+++ b/tests/hw_test_rmii_rx/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
 include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
-project(hw_test_mii)
+project(hw_test_rmii)
 
 set(APP_HW_TARGET           xk-eth-xu316-dual-100m.xn)
 
@@ -23,41 +23,32 @@ add_custom_command(
     VERBATIM
 )
 
-add_custom_target(xscope_cmds_enum_gen_tx DEPENDS ${XSCOPE_CMDS_ENUM_FILE})
+add_custom_target(xscope_cmds_enum_gen_rx DEPENDS ${XSCOPE_CMDS_ENUM_FILE})
 
 set(COMPILER_FLAGS_COMMON   -g
                             -report
                             -DDEBUG_PRINT_ENABLE=1
                             -Os
                             -Wno-reinterpret-alignment
-							-fxscope
+                            -fxscope
                             -DBOARD_SUPPORT_BOARD=XK_ETH_XU316_DUAL_100M
                             -DENABLE_MAC_START_NOTIFICATION=1
                             )
 
 foreach(phy PHY0 PHY1) # compile for each phy
     string(TOLOWER ${phy} phy_lower)
-    set(APP_COMPILER_FLAGS_tx_only_${phy_lower}                             ${COMPILER_FLAGS_COMMON} -DETHERNET_SUPPORT_TRAFFIC_SHAPER=1 -DETHERNET_SUPPORT_HP_QUEUES=1 -DUSE_${phy}=1)
-    set(APP_COMPILER_FLAGS_tx_single_client_${phy_lower}                    ${COMPILER_FLAGS_COMMON} -DSINGLE_CLIENT=1 -DUSE_${phy}=1)
-    set(APP_COMPILER_FLAGS_tx_single_client_with_ts_probe_${phy_lower}     ${COMPILER_FLAGS_COMMON} -DSINGLE_CLIENT=1 -DPROBE_TX_TIMESTAMPS=1 -DUSE_${phy}=1)
+    set(APP_COMPILER_FLAGS_rx_${phy_lower}                 ${COMPILER_FLAGS_COMMON} -DUSE_${phy}=1)
+    set(APP_COMPILER_FLAGS_rx_multiple_queues_${phy_lower}      ${COMPILER_FLAGS_COMMON} -DMULTIPLE_QUEUES=1 -DETHERNET_SUPPORT_HP_QUEUES=1 -DUSE_${phy}=1)
 endforeach()
 
 set(APP_XSCOPE_SRCS src/config.xscope)
 
-file(GLOB XC_SOURCES RELATIVE ${CMAKE_CURRENT_LIST_DIR} "src/*.xc")
-file(GLOB COMMON_SOURCES RELATIVE ${CMAKE_CURRENT_LIST_DIR}
-                                  "${CMAKE_CURRENT_LIST_DIR}/../hw_test_mii/src/xscope_control/*.xc"
-                                  "${CMAKE_CURRENT_LIST_DIR}/../hw_test_mii/src/phy_driver/*.xc")
-
-list(APPEND XC_SOURCES ${COMMON_SOURCES}  "../include/log_tx_ts.c")
-
-set(APP_XC_SRCS ${XC_SOURCES})
-set(APP_INCLUDES src ../hw_test_mii/src/xscope_control ../hw_test_mii/src/xu316_dual_100m_ports ${REL_AUTOGEN_DIR} ../include)
+set(APP_INCLUDES src/xscope_control src/xu316_dual_100m_ports ${REL_AUTOGEN_DIR})
 
 set(XMOS_SANDBOX_DIR    ${CMAKE_CURRENT_LIST_DIR}/../../..)
 
 XMOS_REGISTER_APP()
 
 foreach(target ${APP_BUILD_TARGETS})
-    add_dependencies(${target} xscope_cmds_enum_gen_tx)
+    add_dependencies(${target} xscope_cmds_enum_gen_rx)
 endforeach()
