--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.21)
 include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
 project(lib_ethernet_examples)
 add_subdirectory(AN00199_gigabit_ethernet_demo_explorerkit)
-add_subdirectory(app_rmii_100Mbit_icmp)
+add_subdirectory(AN00120_100Mbit_ethernet_demo_rmii)
