--- a/examples/AN00120_100Mbit_ethernet_demo_rmii/settings.yml
+++ b/examples/AN00120_100Mbit_ethernet_demo_rmii/settings.yml
@@ -10,6 +10,7 @@ documentation:
   exclude_patterns_path: doc/exclude_patterns.inc
   root_doc: doc/rst/AN00120.rst
   linkcheck_ignore_regex: ['.*xmos\.com\/file.*']
+  cognidox_part_number: XM-008190-AN
   pdfs:
     doc/rst/AN00120.rst:
       pdf_title: '{{title}}'
@@ -18,3 +19,5 @@ documentation:
       pdf_title: '{{title}} (README)'
       pdf_filename: '{{an_number}}_v{{version}}_readme'
       pdf_short: yes
+software:
+  cognidox_part_number: XM-006352-SM
